examples/test/testpolicy6564.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6564
  namespace: namespace157
spec:
  podSelector:
    matchLabels:
      key18: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value49
          key41: value32
      podSelector:
        matchLabels:
          key45: value46
          key31: value14
